--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: page
 titel: Work In Progress
 ---
 
+<h2>Work In Progress</h2>
+
 But test coverage are already available.
 
 <h2>Links</h2>
