Remove directory link while there is no directory index

--- a/test-coverage.html
+++ b/test-coverage.html
@@ -17,10 +17,10 @@ permalink: /test-coverage/
   You can find the latest mutation test coverage here: <a href="../test-coverage-reports/mutation-test-coverage-reports/latest/">Latest Mutation Test Coverage</a>
 </p>
 
-<p style="margin-top:4rem">
-  You can find the unit test by version here: <a href="../test-coverage-reports/unit-test-coverage-reports/">Unit Test Coverage by Version</a>
-</p>
+<!--<p style="margin-top:4rem">-->
+<!--  You can find the unit test by version here: <a href="../test-coverage-reports/unit-test-coverage-reports/">Unit Test Coverage by Version</a>-->
+<!--</p>-->
 
-<p>
-  You can find the mutation test by version here: <a href="../test-coverage-reports/mutation-test-coverage-reports/">Mutation Test Coverage by Version</a>
-</p>
+<!--<p>-->
+<!--  You can find the mutation test by version here: <a href="../test-coverage-reports/mutation-test-coverage-reports/">Mutation Test Coverage by Version</a>-->
+<!--</p>-->
